--- a/Frontend/test.html
+++ b/Frontend/test.html
@@ -1,50 +1,99 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Acordeón funcionando</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <div class="container mt-5">
-      <div class="accordion" id="accordionFlushExample">
-        <!-- Módulo 1 -->
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-heading1">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#flush-collapse1"
-              aria-expanded="false"
-              aria-controls="flush-collapse1"
-            >
-              Módulo 1
-            </button>
-          </h2>
-          <div
-            id="flush-collapse1"
-            class="accordion-collapse collapse"
-            aria-labelledby="flush-heading1"
-            data-bs-parent="#accordionFlushExample"
-          >
-            <div class="accordion-body">Contenido módulo 1</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Asegúrate de tener esto -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<html>
+<head>
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            padding: 20px;
+            background: linear-gradient(to right, #6a11cb, #2575fc);
+            color: #fff;
+            text-align: center;
+        }
+        h2 {
+            margin-bottom: 20px;
+            font-size: 1.8em;
+        }
+        .sortable-list {
+            list-style: none;
+            padding: 0;
+            width: 350px;
+            margin: auto;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+        }
+        .sortable-item {
+            padding: 15px 20px;
+            margin: 8px 0;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 5px;
+            font-size: 1.1em;
+            color: #333;
+            font-weight: bold;
+            cursor: grab;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: background 0.2s, transform 0.2s;
+        }
+        .sortable-item:hover {
+            background: #e8f0ff;
+            transform: scale(1.03);
+        }
+        .dragging {
+            opacity: 0.7;
+            transform: rotate(-2deg);
+        }
+        .over {
+            border: 2px dashed #ff8c42;
+            background: #fff3e0;
+        }
+    </style>
+</head>
+<body>
+    <h2>Drag and Drop Sortable List</h2>
+    <ul class="sortable-list">
+        <li class="sortable-item" draggable="true">Item 1</li>
+        <li class="sortable-item" draggable="true">Item 2</li>
+        <li class="sortable-item" draggable="true">Item 3</li>
+        <li class="sortable-item" draggable="true">Item 4</li>
+        <li class="sortable-item" draggable="true">Item 5</li>
+    </ul>
+    <script>
+        const list = document.querySelector('.sortable-list');
+        let draggingItem = null;
+        list.addEventListener('dragstart', (e) => {
+            draggingItem = e.target;
+            e.target.classList.add('dragging');
+        });
+        list.addEventListener('dragend', (e) => {
+            e.target.classList.remove('dragging');
+            document.querySelectorAll('.sortable-item')
+                .forEach(item => item.classList.remove('over'));
+            draggingItem = null;
+        });
+        list.addEventListener('dragover', (e) => {
+            e.preventDefault();
+            const draggingOverItem = getDragAfterElement(list, e.clientY);
+            document.querySelectorAll('.sortable-item').forEach
+                (item => item.classList.remove('over'));
+            if (draggingOverItem) {
+                draggingOverItem.classList.add('over');
+                list.insertBefore(draggingItem, draggingOverItem);
+            } else {
+                list.appendChild(draggingItem); 
+            }
+        });
+        function getDragAfterElement(container, y) {
+            const draggableElements = [...container.querySelectorAll
+                ('.sortable-item:not(.dragging)')];
+            return draggableElements.reduce((closest, child) => {
+                const box = child.getBoundingClientRect();
+                const offset = y - box.top - box.height / 2;
+                if (offset < 0 && offset > closest.offset) {
+                    return { offset: offset, element: child };
+                } else {
+                    return closest;
+                }
+            }, { offset: Number.NEGATIVE_INFINITY }).element;
+        }
+    </script>
+</body>
 </html>
