--- a/Frontend/indexPag.html
+++ b/Frontend/indexPag.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navContent">
 
             <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link active" href="indexPag.html">Inicio</a></li>
                 <li class="nav-item"><a class="nav-link" href="generalCursesStudent.html">Cursos</a></li>
                 <li class="nav-item"><a class="nav-link" href="contactStudent.html">Contacto</a></li>
             </ul>
@@ -374,7 +374,7 @@
                     <div class="col-md-4 mb-4">
                         <h5>Enlaces rápidos</h5>
                         <ul class="list-unstyled">
-                            <li><a href="index.html" class="text-white">Inicio</a></li>
+                            <li><a href="indexPag.html" class="text-white">Inicio</a></li>
                             <li><a href="generalCursesStudent.html" class="text-white">Cursos</a></li>
                             <li><a href="contactStudent.html" class="text-white">Contacto</a></li>
                         </ul>
