--- a/Frontend/generalCursesStudent.html
+++ b/Frontend/generalCursesStudent.html
@@ -20,7 +20,7 @@
 
     <!-- Navbar  menu responsive-->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #142025; height: 65px;">
-        <a class="navbar-brand ms-2" href="indexPag.html">DevOrbit</a>
+        <a class="navbar-brand ms-2" >DevOrbit</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContent">
             <span class="navbar-toggler-icon"></span>
@@ -89,7 +89,6 @@
             <div class="col-md-4 mb-4">
                 <h5>Enlaces rápidos</h5>
                 <ul class="list-unstyled">
-                    <li><a href="indexPag.html" class="text-white">Inicio</a></li>
                     <li><a href="generalCursesStudent.html" class="text-white">Cursos</a></li>
                     <li><a href="contactStudent.html" class="text-white">Contacto</a></li>
                 </ul>
