add view course

--- a/Frontend/video.html
+++ b/Frontend/video.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <header id="header">
+
       <script>
         fetch("components/uploadVideo.html")
           .then((res) => res.text())
@@ -185,7 +186,7 @@
       </div>
 
 
-      <div id="accordion-module" class="accordion-module container py-5 ">
+      <div id="accordion-module" class="accordion-module container py-5" >
         <h2 class="h2-module-course">
           Módulos del curso
         </h2>
@@ -198,7 +199,7 @@
     </main>
 
     <script src="/Frontend/js/api/Video.js"></script>
-    <script src="/Frontend/js/api/course.js"></script>
+    <script src="/Frontend/js/api/courseVideo.js"></script>
     <script src="/Frontend/js/scripts/FileInputScript.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
