--- a/Frontend/test.html
+++ b/Frontend/test.html
@@ -1,99 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            padding: 20px;
-            background: linear-gradient(to right, #6a11cb, #2575fc);
-            color: #fff;
-            text-align: center;
-        }
-        h2 {
-            margin-bottom: 20px;
-            font-size: 1.8em;
-        }
-        .sortable-list {
-            list-style: none;
-            padding: 0;
-            width: 350px;
-            margin: auto;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-        }
-        .sortable-item {
-            padding: 15px 20px;
-            margin: 8px 0;
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 5px;
-            font-size: 1.1em;
-            color: #333;
-            font-weight: bold;
-            cursor: grab;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: background 0.2s, transform 0.2s;
-        }
-        .sortable-item:hover {
-            background: #e8f0ff;
-            transform: scale(1.03);
-        }
-        .dragging {
-            opacity: 0.7;
-            transform: rotate(-2deg);
-        }
-        .over {
-            border: 2px dashed #ff8c42;
-            background: #fff3e0;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Test Interactivo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/test.css">
 </head>
 <body>
-    <h2>Drag and Drop Sortable List</h2>
-    <ul class="sortable-list">
-        <li class="sortable-item" draggable="true">Item 1</li>
-        <li class="sortable-item" draggable="true">Item 2</li>
-        <li class="sortable-item" draggable="true">Item 3</li>
-        <li class="sortable-item" draggable="true">Item 4</li>
-        <li class="sortable-item" draggable="true">Item 5</li>
+
+  <header>
+    <h1 id="course-title">Título del Curso</h1>
+    <p id="instructions">Aquí irán las instrucciones del test</p>
+  </header>
+
+  <main>
+    <ul id="questions-box">
+      <!-- Aquí se cargarán las preguntas -->
     </ul>
-    <script>
-        const list = document.querySelector('.sortable-list');
-        let draggingItem = null;
-        list.addEventListener('dragstart', (e) => {
-            draggingItem = e.target;
-            e.target.classList.add('dragging');
-        });
-        list.addEventListener('dragend', (e) => {
-            e.target.classList.remove('dragging');
-            document.querySelectorAll('.sortable-item')
-                .forEach(item => item.classList.remove('over'));
-            draggingItem = null;
-        });
-        list.addEventListener('dragover', (e) => {
-            e.preventDefault();
-            const draggingOverItem = getDragAfterElement(list, e.clientY);
-            document.querySelectorAll('.sortable-item').forEach
-                (item => item.classList.remove('over'));
-            if (draggingOverItem) {
-                draggingOverItem.classList.add('over');
-                list.insertBefore(draggingItem, draggingOverItem);
-            } else {
-                list.appendChild(draggingItem); 
-            }
-        });
-        function getDragAfterElement(container, y) {
-            const draggableElements = [...container.querySelectorAll
-                ('.sortable-item:not(.dragging)')];
-            return draggableElements.reduce((closest, child) => {
-                const box = child.getBoundingClientRect();
-                const offset = y - box.top - box.height / 2;
-                if (offset < 0 && offset > closest.offset) {
-                    return { offset: offset, element: child };
-                } else {
-                    return closest;
-                }
-            }, { offset: Number.NEGATIVE_INFINITY }).element;
-        }
-    </script>
+
+    <div class="text-center">
+      <button id="btn-answers">Enviar respuestas</button>
+    </div>
+
+    <p id="box-result"></p>
+  </main>
+
+  <script src="./js/api/test.js"></script>
 </body>
 </html>
