--- a/Frontend/success.html
+++ b/Frontend/success.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,6 +63,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <img class="logo" src="Frontend/assets/icons/devorbitLogo.png" alt="DevOrbit Logo">
@@ -75,31 +77,36 @@
         const paymentId = urlParams.get('paymentId');
         const payerId = urlParams.get('PayerID');
         const courseId = urlParams.get('courseId');
-        const userId = localStorage.getItem('userId');
-        console.log("Pago id: " + paymentId + "Pagador: " + payerId + "Id curso: " + courseId + "Usuario: " + userId)
-    
+
+        console.log("Course ID:", courseId);
+
+        const usuarioActual = JSON.parse(localStorage.getItem('usuarioActual'));
+        const userId = 1;
+
         if (paymentId && payerId && courseId && userId) {
             fetch(`http://localhost:8080/api/payments/execute?paymentId=${paymentId}&payerId=${payerId}&courseId=${courseId}&userId=${userId}`, {
                 method: 'POST'
             })
-            .then(response => response.json())
-            .then(data => {
-                if (data.status === 'success') {
-                    document.getElementById('message').innerText = "¡El pago fue procesado exitosamente!";
-                    const link = document.getElementById('redirectLink');
-                    link.href = `/Frontend/course.html?courseId=${courseId}`;
-                    link.style.display = 'inline-block';
-                } else {
-                    document.getElementById('message').innerText = "Error al completar el pago: " + data.message;
-                }
-            })
-            .catch(error => {
-                console.error('Error al completar el pago:', error);
-                document.getElementById('message').innerText = "Ocurrió un error al procesar el pago.";
-            });
+                .then(response => response.json())
+                .then(data => {
+                    if (data.status === 'success') {
+                        document.getElementById('message').innerText = "¡El pago fue procesado exitosamente!";
+                        const link = document.getElementById('redirectLink');
+                        link.href = `/Frontend/course.html?courseId=${courseId}`;
+                        link.style.display = 'inline-block';
+                    } else {
+                        document.getElementById('message').innerText = "Error al completar el pago: " + data.message;
+                    }
+                })
+                .catch(error => {
+                    console.error('Error al completar el pago:', error);
+                    document.getElementById('message').innerText = "Ocurrió un error al procesar el pago.";
+                });
         } else {
             document.getElementById('message').innerText = "No se pudo completar el pago. Faltan parámetros.";
         }
     </script>
+
 </body>
+
 </html>
