--- a/Frontend/generalCursesStudent.html
+++ b/Frontend/generalCursesStudent.html
@@ -52,14 +52,13 @@
                         <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="CreateCourse.html" id="#createcurse">
+                        <i class="bi bi-box-arrow-right"></i> Crear Curso
+                    </a>
+                </li>
             </ul>
         </div>
-
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-                <a class="btn btn-primary ms-3" href="/Frontend/CreateCourse.html" role="button">Crear Curso</a>
-            </li>
-        </ul>
     </nav>
 
     <div class="modal fade" id="profileModal" tabindex="-1" aria-labelledby="profileModalLabel">
