--- a/Frontend/video.html
+++ b/Frontend/video.html
@@ -201,7 +201,7 @@
       </div>
 
       <div id="accordion-module" class="accordion-module container d-flex flex-column gap-4">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="generalCursesStudent.html">
+        <a class="navbar-brand d-flex align-items-center gap-2" id="link-back-course">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30px"
