--- a/Frontend/generalCursesStudent.html
+++ b/Frontend/generalCursesStudent.html
@@ -1,69 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevOrbit.com</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+      <div class="container d-flex">
+        <a class="navbar-brand" href="generalCursesStudent.html">
+          <img
+            src="assets/icons/devorbitLogo.png"
+            alt="DevOrbit Logo"
+            width="180"
+            class="d-inline-block align-text-top"
+          />
+        </a>
 
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #00aaff; height: 65px;">
-        <div class="mx-auto" style="color: white; font-size: 18px;">
-            Aquí puedes encontrar los mejores cursos
-        </div>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item fw-semibold">
+            <a
+              class="nav-link"
+              href="#"
+              data-bs-toggle="modal"
+              data-bs-target="#profileModal"
+            >
+              <i class="bi bi-person"></i> Perfil
+            </a>
+          </li>
+          <li class="nav-item fw-semibold">
+            <a
+              class="nav-link"
+              href="library.html"
+            >
+              <i class="bi bi-person"></i> Mi Biblioteca
+            </a>
+          </li>
+          <li class="nav-item fw-semibold">
+            <a class="nav-link" href="#" id="logoutLink">
+              <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
+            </a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #142025; height: 65px;">
-        <a class="navbar-brand ms-2">DevOrbit</a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContent">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navContent">
-            <div class="col-md-6 mb-2 mb-md-0">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar cursos..." aria-label="Buscar">
-                </form>
-            </div>
-
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#profileModal">
-                        <i class="bi bi-person"></i> Perfil
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" id="logoutLink">
-                        <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="modal fade" id="profileModal" tabindex="-1" aria-labelledby="profileModalLabel">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="profileModalLabel">Mi Perfil</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="profileForm">
-                        <div class="mb-3">
-                            <label for="username" class="form-label">Nombre de usuario</label>
-                            <input type="text" class="form-control" id="username" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" required>
-                        </div>
-                        <!-- <div class="mb-3">
+    <div
+      class="modal fade"
+      id="profileModal"
+      tabindex="-1"
+      aria-labelledby="profileModalLabel"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="profileModalLabel">Mi Perfil</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Cerrar"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="profileForm">
+              <div class="mb-3">
+                <label for="username" class="form-label"
+                  >Nombre de usuario</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="username"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" required />
+              </div>
+              <!-- <div class="mb-3">
                             <label for="currentPassword" class="form-label">Contraseña actual</label>
                             <input type="password" class="form-control" id="currentPassword">
                         </div>
@@ -75,91 +97,119 @@
                             <label for="confirmPassword" class="form-label">Confirmar nueva contraseña</label>
                             <input type="password" class="form-control" id="confirmPassword">
                         </div> -->
-                    </form>
-                    <div class="alert alert-success d-none" id="successAlert"></div>
-                    <div class="alert alert-danger d-none" id="errorAlert"></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger me-auto" id="deleteAccountBtn">
-                        Eliminar Cuenta
-                    </button>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" id="saveProfileBtn">Guardar Cambios</button>
-                </div>
-            </div>
+            </form>
+            <div class="alert alert-success d-none" id="successAlert"></div>
+            <div class="alert alert-danger d-none" id="errorAlert"></div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-danger me-auto"
+              id="deleteAccountBtn"
+            >
+              Eliminar Cuenta
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cerrar
+            </button>
+            <button type="button" class="btn btn-primary" id="saveProfileBtn">
+              Guardar Cambios
+            </button>
+          </div>
         </div>
+      </div>
     </div>
-
 
     <div class="course-title-container gap-2 ms-3 me-2">
-        <h2 class="text-left" style="font-size: 2rem; color: #00aaff; font-weight: bold;">Cursos Disponibles</h2>
+      <h2
+        class="text-left"
+        style="font-size: 2rem; color: #00aaff; font-weight: bold"
+      >
+        Cursos Disponibles
+      </h2>
     </div>
-
 
     <div class="container-fluid mt-5 px-5">
-        <div class="row" id="course-container">
-        </div>
+      <div class="row" id="course-container"></div>
     </div>
 
-    <div id="carouselCursos" class="carousel slide" data-bs-ride="carousel" data-bs-wrap="true">
-        <div class="carousel-indicators" id="carousel-indicators">
-        </div>
+    <div
+      id="carouselCursos"
+      class="carousel slide"
+      data-bs-ride="carousel"
+      data-bs-wrap="true"
+    >
+      <div class="carousel-indicators" id="carousel-indicators"></div>
 
-        <div class="carousel-inner" id="carousel-container">
-        </div>
+      <div class="carousel-inner" id="carousel-container"></div>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCursos" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselCursos" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </button>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselCursos"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselCursos"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon"></span>
+      </button>
     </div>
 
     <footer class="bg-dark text-white py-4 mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <h5>Sobre DevOrbit</h5>
-                    <p>DevOrbit es una plataforma donde puedes encontrar los mejores cursos para mejorar tus habilidades
-                        tecnológicas.</p>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <h5>Sobre DevOrbit</h5>
+            <p>
+              DevOrbit es una plataforma donde puedes encontrar los mejores
+              cursos para mejorar tus habilidades tecnológicas.
+            </p>
+          </div>
 
-                <div class="col-md-4 mb-4">
-                    <h5>Enlaces rápidos</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="generalCursesStudent.html" class="text-white">Cursos</a></li>
-                        <li><a href="contactStudent.html" class="text-white">Contacto</a></li>
-                    </ul>
-                </div>
+          <div class="col-md-4 mb-4">
+            <h5>Enlaces rápidos</h5>
+            <ul class="list-unstyled">
+              <li>
+                <a href="generalCursesStudent.html" class="text-white"
+                  >Cursos</a
+                >
+              </li>
+              <li>
+                <a href="contactStudent.html" class="text-white">Contacto</a>
+              </li>
+            </ul>
+          </div>
 
-                <div class="col-md-4 mb-4">
-                    <h5>Síguenos</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Facebook</a></li>
-                        <li><a href="#" class="text-white">Twitter</a></li>
-                        <li><a href="#" class="text-white">Instagram</a></li>
-                    </ul>
-                </div>
-            </div>
-
-
-            <hr class="bg-white">
-
-
-            <div class="text-center">
-                <p>&copy; 2025 DevOrbit. Todos los derechos reservados.</p>
-            </div>
+          <div class="col-md-4 mb-4">
+            <h5>Síguenos</h5>
+            <ul class="list-unstyled">
+              <li><a href="#" class="text-white">Facebook</a></li>
+              <li><a href="#" class="text-white">Twitter</a></li>
+              <li><a href="#" class="text-white">Instagram</a></li>
+            </ul>
+          </div>
         </div>
-    </footer>
 
+        <hr class="bg-white" />
+
+        <div class="text-center">
+          <p>&copy; 2025 DevOrbit. Todos los derechos reservados.</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-
     <script src="scripStudent.js"></script>
-
-
-</body>
-
+  </body>
 </html>
